--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -9,8 +9,11 @@
   </head>
 
   <body>
-
-    <%= yield %>
-
+    <div class="container">
+      <h1 class="welcome text-center">Welcome to <br> Ice Code</h1>
+      <div class="card card-container">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
