--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <h1 class="welcome text-center">Welcome to <br> Ice Code</h1>
+      <h1 class="welcome text-center">Welcome to <br> School Management System</h1>
       <div class="card card-container">
         <%= yield %>
       </div>
