--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,7 +27,7 @@
             <div class="alert alert-info">
                 Please Wait...</div>
             <div class="alert alert-success" style="display:none;">
-                <span class="glyphicon glyphicon-ok"></span> Drag table row and cange Order</div>
+                <span class="glyphicon glyphicon-ok"></span>Teachers List</div>
             <table class="table">
                 <thead>
                   <tbody>
@@ -37,9 +37,6 @@
                         </th>
                         <th>
                             Email
-                        </th>
-                        <th>
-                            Password
                         </th>
                     </tr>
 
